--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.2",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
